--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=8081
 
 logging.level.com.example.internmanage.Mapper=debug
+
+#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
